--- a/main-site/index.html
+++ b/main-site/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css?version=1.0" />
     <title>Loki's Ploys</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="container">
-          <nav>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul>
-          </nav>
+      <div class="container">
+        <nav>
+          <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <div class="about-container">
+        <div class="about-box">
+           
         </div>
-      </header>
-</body>
+        <div class="about-box2">
+            <h4>Loki's Ploys</h4>
+            <p> </p>
+        </div>
+    </div>
+    
+  </body>
 </html>
