--- a/main-site/index.html
+++ b/main-site/index.html
@@ -23,8 +23,7 @@
            
         </div>
         <div class="about-box2">
-            <h4>Loki's Ploys</h4>
-            <p> </p>
+            <p>All of my The Odin Project assignments with a fun twist to spice things up</p>
         </div>
     </div>
     
