Update page title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            
         </div>
         <div class="about-box2">
-            <p>My <a class="odin-link" href="https://www.theodinproject.com/"><strong>The Odin Project</strong></a> assignments, with a fun <em>twist </em>to spice things up</p>
+            <p>My <a class="odin-link" href="https://www.theodinproject.com/"><strong>The Odin Project</strong></a> assignments, with fun <em>twists</em> to spice things up</p>
         </div>
     </div>
     
