--- a/projects.html
+++ b/projects.html
@@ -19,11 +19,11 @@
     </header>
 
     <div class="about-container">
-        <div class="about-box3">
+        <div class="about-box">
            
         </div>
-        <div class="about-box4">
-            <p>Nothing to see here, come back later!</p>
+        <div class="about-box2">
+            <p>Nothing to see here, <strong>come back later!</strong></p>
         </div>
     </div>
     
