--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </div>
     </header>
 
-    <div class="about-container">
-        <div class="about-box">
-          <div class="about-box2">
-            <p>My <a class="odin-link" href="https://www.theodinproject.com/"><strong>The Odin Project</strong></a> assignments, with fun <em>twists</em> to spice things up</p>
+    <div class="card-container">
+        <div class="card1">
+          <div class="card2">
+            <p>My <a class="odin-link" href="https://www.theodinproject.com/"><strong>The Odin Project</strong></a> assignments, with fun <em>twists</em> to spice things up >:D</p>
         </div>
         </div>
         
