Remove smiley face from about page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="card-container">
         <div class="card1">
           <div class="card2">
-            <p>My <a class="odin-link" href="https://www.theodinproject.com/"><strong>The Odin Project</strong></a> assignments, with fun <em>twists</em> to spice things up <strong class="about-trick">>:D</strong></p>
+            <p>My <a class="odin-link" href="https://www.theodinproject.com/"><strong>The Odin Project</strong></a> assignments, with fun <em>twists</em> to spice things up</p>
         </div>
         </div>
         
