--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,15 @@
       </div>
     </header>
 
+    <div class="projects-container">
+      <a  href="odin-recipes\recipes\index.html">
+        <div class="project1">
+          <p id="project-title"></p>
+          <p> <strong>Odin Recipes</strong> <br>Three cool recipes to make in your spare time</p>
+        </div>
+      </a>
+      
+    </div>
     
   </body>
 </html>
