Add border thickness to navbar. Update hover color for navabr

--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,7 @@
     <div class="projects-container">
       <a  href="odin-recipes\recipes\index.html">
         <div class="project1">
-          <p id="project-title"></p>
-          <p> <strong>Odin Recipes</strong> <br>Three cool recipes to make in your spare time</p>
+          <p> <strong class="proj-title">Odin Recipes</strong> <br>Three cool recipes to make in your spare time</p>
         </div>
       </a>
       
