Open the odin project website in a new tab

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="projects-container">
-      <a  href="odin-recipes\recipes\index.html">
+      <a  href="odin-recipes\recipes\index.html" target="_blank">
         <div class="project1">
           <p> <strong class="proj-title">Odin Recipes</strong> <br>Three cool recipes to make in your spare time</p>
         </div>
