Add github image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <div class="card1">
             <p>My <a class="odin-link" href="https://www.theodinproject.com/"><strong>The Odin Project</strong></a> assignments, with fun <em>twists</em> to spice things up</p>
         </div>
-    </div>
+    </div>  
     
+    <div class="github-link">
+      <a href="https://github.com/GAchuzia/loki-ploys" target="_blank"><img src="media/github-logo.svg"></a>
+    </div>
   </body>
 </html>
