--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,10 @@
       </a>
       
     </div>
+
+    <div class="github-link">
+      <a href="https://github.com/GAchuzia/loki-ploys" target="_blank"><img src="media/github-logo.svg"></a>
+    </div>
     
   </body>
 </html>
