--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css?version=1.0" />
     <title>Odin Recipes</title>
 </head>
 <body>
-    <p> COME BACK LATER!</p>
+    <div class="food-container">
+        <div class="food1">
+            <h3>Food1</h3>
+        </div>
+        <div class="food2">
+            <h3>Food2</h3>
+        </div>
+        <div class="food3">
+            <h3>Food3</h3>
+        </div>
+    </div>
 </body>
 </html>
