Update github link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>  
     
     <div class="github-link">
-      <a href="https://github.com/GAchuzia/loki-ploys" target="_blank"><img src="media/github-logo.svg"></a>
+      <p>GAchuzia's <a href="https://github.com/GAchuzia/loki-ploys"> Github  Repo</a></p>
     </div>
+    
   </body>
 </html>
