--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="github-link">
-      <a href="https://github.com/GAchuzia/loki-ploys" target="_blank"><img src="media/github-logo.svg"></a>
+      <p>GAchuzia's <a href="https://github.com/GAchuzia/loki-ploys"> Github  Repo</a></p>
     </div>
     
   </body>
