Add rice image and divy website into sections

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -9,13 +9,17 @@
 <body>
     <div class="food-container">
         <div class="food1">
-            <h3>Food1</h3>
+            <p>Food1</p>
+            <div class="food1-img">
+                <img src="media\rice.jpg" width = 20px>
+            </div>
+            
         </div>
         <div class="food2">
-            <h3>Food2</h3>
+            <p>Food2</p>
         </div>
         <div class="food3">
-            <h3>Food3</h3>
+            <p>Food3</p>
         </div>
     </div>
 </body>
