Add work in progress to odin recipe index page

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -7,11 +7,11 @@
     <title>Odin Recipes</title>
 </head>
 <body>
+    <h1>Work In Progress!</h1>
     <div class="food-container">
         <div class="food1">
             <p>Food1</p>
             <div class="food1-img">
-                <img src="media\rice.jpg" width = 20px>
             </div>
             
         </div>
