Update odin recipe home page layout

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -9,17 +9,17 @@
 <body>
     <h1>Work In Progress!</h1>
     <div class="food-container">
-        <div class="food1">
-            <p>Food1</p>
-            <div class="food1-img">
-            </div>
-            
+        <div class="food-img">
+            <p>Funny Food Related Image Goes Here</p>
+            <img>
         </div>
-        <div class="food2">
-            <p>Food2</p>
-        </div>
-        <div class="food3">
-            <p>Food3</p>
+        <div class="recipe-list">
+            <ul>
+                <p>Breakfast Recipes</p>
+                <li><a href="">Pancakes</a></li>
+                <li><a href="">Tortilla Wrap</a></li>
+                <li><a href="">Omlet</a></li>
+            </ul>
         </div>
     </div>
 </body>
