--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Work In Progress!</h1>
     <div class="food-container">
+        <p>Odin Recipes</p>
         <div class="food-img">
             <p>Funny Food Related Image Goes Here</p>
             <img>
