--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css?version=1.0" />
-    <title>Odin Recipes</title>
+    <title>Gachuzia's Odin Recipes</title>
 </head>
 <body>
     <h1>Work In Progress!</h1>
