Add links to all html pages

--- a/odin-recipes/recipes/pancakes.html
+++ b/odin-recipes/recipes/pancakes.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Work In Progress!</h1>
     <div class="food-container">
-        <p>Odin Recipes</p>
+        <p><a href="index.html">Home</a></p>
         <div class="food-img">
             <p>Pancake Image</p>
             <img>
