Add colors to a pages

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -7,9 +7,9 @@
     <title>Gachuzia's Odin Recipes</title>
 </head>
 <body>
-    <h1>Work In Progress!</h1>
+   
     <div class="food-container">
-        <p>Odin Recipes</p>
+        <p class="website-title">Odin Recipes</p>
         <div class="food-img">
             <p>Funny Food Related Image Goes Here</p>
             <img>
