Update images for index and tortilla.html

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -9,10 +9,8 @@
 <body>
    
     <div class="food-container">
-        <p class="website-title">Odin Recipes</p>
         <div class="food-img">
-            <p>Funny Food Related Image Goes Here</p>
-            <img>
+            <img src="media\patrick.gif">
         </div>
         <div class="recipe-list">
             <ul>
