Update styles for odin recipe pages

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -17,7 +17,7 @@
                 <p>Breakfast Recipes</p>
                 <li><a href="pancakes.html">Pancakes</a></li>
                 <li><a href="tortilla.html">Tortilla Wrap</a></li>
-                <li><a href="omlet.html">Omlet</a></li>
+                <li><a href="omellete.html">Omellete</a></li>
             </ul>
         </div>
     </div>
