--- a/odin-recipes/recipes/tortilla.html
+++ b/odin-recipes/recipes/tortilla.html
@@ -7,18 +7,23 @@
     <title>Gachuzia's Odin Recipes</title>
 </head>
 <body>
+    <div class="breakfast-container">
 
-    <div class="food-container">
-        <p><a href="index.html">Home</a></p>
-        <div class="food-img">
-            <p>Tortilla Image</p>
-           
+        <div class="breakfast-box1">
+            <img src="" width="320" height="340">
+            <p>Tortilla Wrap</p> 
         </div>
-        <div class="recipe-list">
+
+        <div class="breakfast-box2">
+            <p><a href="index.html">Breakfast Recipes</a></p>
+            <p>Instructions</p>
             <ul>
-                <p>Instructions</p>
+                <li>1. Officia ipsum exercitationem, a ad sapiente culpa autem ipsa veritatis qui minus amet asperiores ab quasi aliquam, quos voluptatibus, est voluptatem esse?</li> <br>
+                <li>2. Vitae natus commodi corporis facere labore id nesciunt corrupti dolore. Voluptates officiis magni autem distinctio?</li> <br>
+                <li>3. Error ratione eius, saepe itaque tenetur, doloribus, voluptatibus eligendi temporibus corrupti dignissimos maiores.</li>
             </ul>
         </div>
-    </div>
+    </div> 
 </body>
 </html>
+
