--- a/odin-recipes/recipes/omellete.html
+++ b/odin-recipes/recipes/omellete.html
@@ -11,7 +11,7 @@
 
         <div class="breakfast-box1">
             <img src="" width="320" height="340">
-            <p>Pancakes</p> 
+            <p>Omellete</p> 
         </div>
 
         <div class="breakfast-box2">
