Add link to loki ploys website

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -21,5 +21,8 @@
             </ul>
         </div>
     </div>
+    <div class="github-link">
+        <p>Back to<a href="https://gachuzia.github.io/loki-ploys/projects.html"> Loki Ploys</a></p>
+      </div>
 </body>
 </html>
