Update Odin Recipes Github link

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="github-link">
-        <p>Back to<a href="https://gachuzia.github.io/loki-ploys/projects.html"> Loki Ploys</a></p>
+        <p><a href="https://gachuzia.github.io/loki-ploys/projects.html"> Loki's Ploys</a></p>
       </div>
 </body>
 </html>
