Update Loki's Ploys github link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>  
     
     <div class="github-link">
-      <p>GAchuzia's <a href="https://github.com/GAchuzia/loki-ploys"> Github  Repo</a></p>
+      <p><a href="https://github.com/GAchuzia/loki-ploys"> Github  Repo</a></p>
     </div>
     
   </body>
