Update github link for lokis ploys website

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         </div>
     </div>  
     
-    <div class="github-link">
-      <p><a href="https://github.com/GAchuzia/loki-ploys"> Github  Repo</a></p>
+    <div class="github-link-card">
+      <div class="link-card">
+        <p><a href="https://github.com/GAchuzia/loki-ploys">Github  Repo</a></p>
+      </div>
     </div>
     
   </body>
