--- a/projects.html
+++ b/projects.html
@@ -27,8 +27,10 @@
       
     </div>
 
-    <div class="github-link">
-      <p>GAchuzia's <a href="https://github.com/GAchuzia/loki-ploys"> Github  Repo</a></p>
+    <div class="github-link-card">
+      <div class="link-card">
+        <p><a href="https://github.com/GAchuzia/loki-ploys">Github  Repo</a></p>
+      </div>
     </div>
     
   </body>
