Update jpgs to gifs, change tortilla wrap to sandwhich

--- a/odin-recipes/recipes/index.html
+++ b/odin-recipes/recipes/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <p>Breakfast Recipes</p>
                 <li><a href="pancakes.html">Pancakes</a></li>
-                <li><a href="tortilla.html">Tortilla Wrap</a></li>
+                <li><a href="sandwhich.html">Sandwhich</a></li>
                 <li><a href="omellete.html">Omellete</a></li>
             </ul>
         </div>
