--- a/odin-recipes/recipes/sandwhich.html
+++ b/odin-recipes/recipes/sandwhich.html
@@ -11,7 +11,7 @@
 
         <div class="breakfast-box1">
             <img src="" width="320" height="340">
-            <p>Tortilla Wrap</p> 
+            <p>Sandwhich</p> 
         </div>
 
         <div class="breakfast-box2">
