Add gifs for each page

--- a/odin-recipes/recipes/omellete.html
+++ b/odin-recipes/recipes/omellete.html
@@ -10,7 +10,7 @@
     <div class="breakfast-container">
 
         <div class="breakfast-box1">
-            <img src="" width="320" height="340">
+            <img src="media\omlette.gif" width="320" height="340">
             <p>Omellete</p> 
         </div>
 
