--- a/odin-recipes/recipes/pancakes.html
+++ b/odin-recipes/recipes/pancakes.html
@@ -10,7 +10,7 @@
     <div class="breakfast-container">
 
         <div class="breakfast-box1">
-            <img src="" width="320" height="340">
+            <img src="media\pancakes.gif" width="320" height="340">
             <p>Pancakes</p> 
         </div>
 
