--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -7,6 +7,77 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="box1">
+        <div class="logo">
+            <p>Header Logo</p>
+        </div>
+        <div class="navbar">
+            <ul>
+                <li>Header link one</li>
+                <li>Header link two</li>
+                <li>Header link three</li>
+            </ul>
+        </div>
+        <div class="box1.1">
+            <p><em>This website is awesome</em></p><br>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="box1.2">
+            <p>this is a placeholder for an image</p>
+        </div>
+    </div>
+
+    <div class="box2">
+        <div class="title1">
+            <p><em>Some random information.</em></p>
+        </div>
+
+        <div class="small-box-container">
+            <div class="small-box1">
+
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+        <div class="small-box-container">
+            <div class="small-box1">
+
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+        <div class="small-box-container">
+            <div class="small-box1">
+
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+
+        <div class="small-box-container">
+            <div class="small-box1">
+
+            </div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+
+    <div class="box3">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+
+    <div class="box4">
+        <div class="box4.5">
+            <p><em>Call to action! It's time!</em></p>
+            <p>Sign up for our product by clickng that button right over there!</p>
+            <button>Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright The Odin Project 2021</p>
+    </div>
     
 </body>
 </html>
