Add landing-page to loki ploys website

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,12 @@
         </div>
       </a>
       
+      <a  href="landing-page\index.html" target="_blank">
+        <div class="project2">
+          <p> <strong class="proj-title">Landing Page</strong> <br>A generic landing page</p>
+        </div>
+      </a>
+  
     </div>
 
     <div class="github-link-card">
