Update styles for the website

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,14 +18,14 @@
                 <li>Header link three</li>
             </ul>
         </div>
-        <div class="box1.1">
-            <p><em>This website is awesome</em></p><br>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign Up</button>
-        </div>
-        <div class="box1.2">
-            <p>this is a placeholder for an image</p>
-        </div>
+    </div>
+    <div class="box11">
+        <p><b>This website is awesome</b></p><br>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign Up</button>
+    </div>
+    <div class="box12">
+        <p>this is a placeholder for an image</p>
     </div>
 
     <div class="box2">
